2014-06-09  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, general/login_page.php: improved
	the source code style.
	
	* godmode/setup/os.builder.php: fixed the form.
	
	* godmode/update_manager_xxx/*, godmode/menu.php,
	include/functions_update_manager.php,
	include/ajax/update_manager.ajax.php,
	include/graphs/functions_gd.php, include/graphs/functions_flot.php,
	include/config_process.php, include/javascript/update_manager.js,
	include/javascript/jquery.knob.js,
	include/javascript/jquery.iframe-transport.js,
	include/javascript/jquery.fileupload.js, images/check-cross.png:
	first version of new update manager.

2014-06-09  Sergio Martin <sergio.martin@artica.es>

	* images/login_background.jpg
	images/login_background.png
	images/backgrounds/mosaico_diagonales_gris.png
	images/backgrounds/fondo_diente_leon_2000.jpg
	images/backgrounds/fondo_arena_2000.jpg
	images/backgrounds/fondo_madera_2000.jpg
	images/backgrounds/fondo_cielo_2000.jpg
	images/backgrounds/fondo_luna_2000.jpg
	images/backgrounds/fondo_paisaje_2000.jpg
	images/backgrounds/fondo_polen_2000.jpg
	images/backgrounds/fondo_cubos_2000.png
	include/styles/pandora.css: Added bunch of new login
	backgrounds and set another default one

2014-06-08  Junichi Satoh  <junichi@rworks.jp>

	* extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Removed
	duplicate queries.

2014-06-08  Junichi Satoh  <junichi@rworks.jp>

	* pandora_console_install: Added support for apache24 with FreeBSD.

2014-06-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/agentes/estado_generalagente.php: Added the
	group to the agent info table.

2014-06-06 Hirofumi Kosaka <kosaka@rworks.jp>

	* godmode/massive/massive_copy_modules.php,
	godmode/massive/massive_delete_modules.php: Fixed bug that all
	agents the user can view could be targets of the operation, if